--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ permalink:        pretty
 
 
 # Setup
-title:            DSSG Project Name
+title:            DSSG Peer Support
 tagline:          ''
 description:      'A 2019 Data Science for Social Good summer fellowship project at the University of Washington' 
 url:              "https://uwescience.github.io"
