--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ title:            DSSG Peer Support
 tagline:          ''
 description:      'A 2019 Data Science for Social Good summer fellowship project at the University of Washington' 
 url:              "https://uwescience.github.io"
-baseurl:          "/DSSG-website-template"
+baseurl:          "DSSG-Peer-Support"
 
 
 paginate:         5
@@ -18,4 +18,4 @@ paginate:         5
 version:          0.0.0
 
 github:
-  repo:           https://github.com/uwescience/DSSG-website-template/
+  repo:           https://github.com/uwescience/DSSG-Peer-Support/
